entity_macros/tests/ui/derive/ent/unexpected-inner-attr-for-ent-edge.stderr
error: Unknown field: `something`
  --> $DIR/unexpected-inner-attr-for-ent-edge.rs:17:34
   |
17 |     #[ent(edge(type = "TestEnt", something))]
   |                                  ^^^^^^^^^
